--- a/settings.json
+++ b/settings.json
@@ -7,7 +7,7 @@
     "modelUrl": "https://teachablemachine.withgoogle.com/models/VUkLIdAL2/",
     "classDetails": [
         {
-            "name":이재용상",
+            "name":"이재용상",
             "title": "이재용상",
             "explain": "삼성전자 이재용을 닮아 돈을 많이 벌 수 있다고 한다!!! 성공을 위해 지금부터 열심히 노력해보자",
             "celeb": "",
